# funk

./: LICENSE  README  funk.cabal  stack.yaml
src/: Hackery.hs  Main.hs
src/Funk/: CLI.hs  LastFM.hs  Track.hs
