name:                funk
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Erik Strömberg
maintainer:          erik.stromberg@gmail.com
copyright:           2017 Erik Strömberg
category:            Audio
build-type:          Simple
cabal-version:       >=1.10

executable funk
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Funk.CLI
                     , Funk.LastFM
                     , Funk.Track
                     , Hackery
  build-depends:       base
                     , bytestring
                     , aeson
                     , directory
                     , hashmap
                     , http-conduit
                     , pureMD5
                     , time
                     , template-haskell
                     , utf8-string
  default-language:    Haskell2010
